project/main/default/objects/Newsletter_Subscription__c/Newsletter_Subscription__c.object-meta.xml
<CustomObject>
    <label>Newsletter Subscription</label>
    <nameField>
        <displayFormat>NS-{00000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newsletter Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>