project/main/default/objects/Newsletter_Subscription__c/fields/Confirmation_Token__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Token__c</fullName>
    <label>Confirmation Token</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
</CustomField>