project/main/default/objects/Newsletter_Subscription__c/fields/Is_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmed__c</fullName>
    <label>Is Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>