project/main/default/objects/Newsletter_Subscription__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Properties</fullName>
            </value>
            <value>
                <fullName>Price Drops</fullName>
            </value>
            <value>
                <fullName>Open Houses</fullName>
            </value>
            <value>
                <fullName>Market Updates</fullName>
            </value>
            <value>
                <fullName>Tips & Advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>