project/main/default/objects/Newsletter_Subscription__c/fields/Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Date__c</fullName>
    <label>Subscription Date</label>
    <type>DateTime</type>
</CustomField>