project/main/default/objects/Newsletter_Subscription__c/fields/Unsubscribe_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Date__c</fullName>
    <label>Unsubscribe Date</label>
    <type>DateTime</type>
</CustomField>